<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoposnsPlatDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect_server">connectServer</string>
    <string name="login">login</string>
    <string name="loginOut">loginOut</string>
    <string name="relogin">relogin</string>
    <string name="register">register</string>
    <string name="server_address">请输入服务器地址</string>
    <string name="server_port">请输入服务器端口</string>
    <string name="server_state">服务器未连接上</string>
    <string name="register_account">请输入注册帐号</string>
    <string name="input_password">请输入密码</string>
    <string name="register_state">未注册帐号</string>
    <string name="login_account">请输入登录帐号</string>
    <string name="login_state">未登录帐号</string>
    <string name="rank_activity_name">排行榜</string>
    <string name="user_name">昵称</string>
    <string name="user_score">成绩</string>
    <string name="user_rankiing">排名</string>
	<string name="goto_newsdk">启动SDK</string>  
    <string name="account_info">帐号信息</string>
    <string name="sdk_showbutton">显示社区SDK图标</string>
    <string name="net_error">网络错误</string>
    <string name="rank_value">名次</string>
    <string name="default_nickname">那时我会出生在一个十一二</string>
    <string name="default_score">1234567812345678123</string>
    
    
</resources>