<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegloginActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/layout_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/text_connect_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/server_state" />

                <Button
                    android:id="@+id/connectServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_connect_result"
                    android:text="@string/connect_server" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_register"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_server"
                android:layout_marginTop="20dp" >

                <EditText
                    android:id="@+id/edit_register_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_account"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_register_account"
                    android:hint="@string/input_password"
                    android:inputType="text"
                    android:maxLength="13" />

                <TextView
                    android:id="@+id/text_register_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_register_password"
                    android:hint="@string/register_state" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_register_result"
                    android:text="@string/register" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_register"
                android:layout_marginTop="20dp" >

                <EditText
                    android:id="@+id/edit_login_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_account"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_login_account"
                    android:hint="@string/input_password"
                    android:inputType="text"
                    android:maxLength="13" />

                <TextView
                    android:id="@+id/text_login_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_login_password"
                    android:hint="@string/login_state" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_login_result"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/loginout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_login_result"
                    android:layout_toRightOf="@id/login"
                    android:text="@string/loginOut" />

                <Button
                    android:id="@+id/relogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_login_result"
                    android:layout_toRightOf="@id/loginout"
                    android:text="@string/relogin" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>