<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/app_list_corner_border"
    android:orientation="vertical" >

    <!--
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:text="@string/rank_activity_name"
            android:textColor="#ff0000ff"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/list_item_rank"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="40dp"
            android:text="@string/user_rankiing"
            android:textColor="#ff000000"
            android:textSize="@dimen/list_item_rank_textsize" />

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_name"
            android:textColor="#ff000000"
            android:textSize="@dimen/list_item_rank_textsize" />

        <TextView
            android:id="@+id/list_item_score"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:maxLength="10"
            android:minWidth="120dp"
            android:text="@string/user_score"
            android:textColor="#ff000000"
            android:textSize="@dimen/list_item_rank_textsize" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ListView
            android:id="@+id/rank_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#a09090ff" />

        <TextView
            android:id="@+id/rank_empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#3e000000"
            android:gravity="center"
            android:text="@string/net_error"
            android:textColor="#ff000000"
            android:textSize="40sp"
            android:visibility="gone" />

        <include
            android:id="@+id/rank_loading"
            layout="@layout/load" />
    </RelativeLayout>

</LinearLayout>