<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_item_selected"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/list_item_rank"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:minWidth="40dp"
        android:text="@string/rank_value"
        android:textColor="#ff000000"
        android:textSize="14sp" />

    <View
        android:layout_width="4dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/intervl" />

    <TextView
        android:id="@+id/list_item_name"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/default_nickname"
        android:textColor="#ff000000"
        android:textSize="14sp" />

    <View
        android:layout_width="4dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/intervl" />

    <TextView
        android:id="@+id/list_item_score"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2.6"
        android:gravity="center"
        android:maxLength="19"
        android:minWidth="120dp"
        android:text="@string/default_score"        
        android:singleLine="true"
        android:textColor="#ff000000"
        android:textSize="14sp" />

</LinearLayout>